--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "~9.1.9",
-    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
